# Steller-Orangebelt

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: ci.yml  deploy.yml
contracts/patches/ethnum/src/: error.rs
contracts/poll_contract/: Cargo.toml
contracts/poll_contract/src/: lib.rs  test.rs
contracts/rewards_contract/: Cargo.toml
contracts/rewards_contract/src/: lib.rs  test.rs
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  PollCard.tsx  TransactionStatus.test.tsx  TransactionStatus.tsx  VoteButton.test.tsx  VoteButton.tsx  WalletConnect.test.tsx  WalletConnect.tsx
frontend/src/hooks/: usePollContract.test.ts  usePollContract.ts  usePollEvents.ts  useWallet.ts
frontend/src/lib/: contractConfig.ts  soroban.ts
scripts/: deploy.ps1  deploy.sh
