[package]
name = "poll-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.5.0"
base64ct = "=1.6.0"
zeroize = "=1.7.0"

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
rewards-contract = { path = "../rewards_contract", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[patch.crates-io]
ethnum = { path = "../patches/ethnum" }
